fixed about spacing bug

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -222,7 +222,7 @@ h6 {
 .about-wrapper {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-	padding: 50px;
+	padding: 0px 50px 40px 50px;
 	gap: 100px;
 }
 
